# logic-evaluation-engine

./: # LEE v3.0 Reboot Initialization.0 Reboot Initialization.md  .gitattributes  .gitignore  Alexander_Patterson_CV.md  Alexander_Patterson_EU_PseudoCV_fn.md  Alexander_Patterson_PseudoCV_MarkdownView.md  For GitHub releases, a clean, standardizedLEE v3.1-pre-grant – Phase-Geometry Engine with StressIndex & Bianchi Residual  LEE Phase-State Geometry Logic Mapping.md  LEE Phase-State Geometry and Logical Mapping.md  LICENSE.txt  NOTICE  NOTICE.md  Project Memo - Why LEE Matters.md  Project Memo 2 - Phase Evaluation as Symbolic Innovation in LEE.md  README.md  WILLIAM_ALEXANDER_PATTERSON_EU_MENA_fn.md  cli_runner.py  demo_y_combinator.py  diagnostic_phase_engine.py  evaluation_tree.txt  lee_manifest.txt  main.py  main_backup-1.py  main_backup_2.py  minimal repro command bash on compute_stress exhaustibility.txt  mkdocs.yaml  phase9_runbook.ps1  pyproject.toml  run_diagnostic.py  sitecustomize.py  test_diagnostic_runs.json.py  test_diagnostic_runs_with_logs.py  test_quantifier_universal_failure.py  test_release_notes  trace_to_proof.py
3.0/: 404.html  LEE - The War Years_us_contacts_and_brief_with_LEE.tex  docs_manifest.txt  index.html  sitemap.xml  stress_index.py
api/: lee_api.py
core/: README_core.md  demo_expression_20250630_0956.json  evaluate_full_closure_aware.py  evaluate_patch_binary_if.txt  evaluation.py  evaluation10.py  evaluation11.py  evaluation13.py  evaluation14.py  evaluation_backup.py  evaluation_backup_2.py  events.py  expressions.py  lee_event.py  (+10 more)
(+553 files in other folders)
